--- a/rock-paper-scissors.css
+++ b/rock-paper-scissors.css
@@ -20,7 +20,7 @@ body {
   border: 3px solid white;
   width: 7.5rem;
   height: 7.5rem;
-  border-radius: 60px;
+  border-radius: 3.75rem;
   margin-right: .9rem;
   cursor: pointer;
 }
@@ -38,7 +38,7 @@ body {
 .reset-score-button, .auto-play-button {
   background-color: white;
   border: none;
-  font-size: 1rem;
+  font-size: 1.2rem;
   padding: .5rem 1rem;
   cursor: pointer;
   margin-top: 3%;
